<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/text_design"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:hint="@string/user_password_text"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLength="25"
        android:paddingLeft="14dp"
        android:text=""
        android:textColorHint="#7c8500"
        android:textSize="21dp"
        />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/text_design"
        android:drawableLeft="@drawable/ic_baseline_account_box_30"
        android:ems="10"
        android:hint="@string/user_name_text"
        android:inputType="textPersonName"
        android:lines="1"
        android:maxLength="25"
        android:paddingLeft="14dp"
        android:text=""
        android:textColorHint="#7c8500"
        android:textSize="21dp"
        />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/text_design"
        android:drawableLeft="@drawable/ic_baseline_account_box_30"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:maxLength="25"
        android:paddingLeft="14dp"
        android:text=""
        android:textColorHint="#7c8500"
        android:textSize="21dp" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/text_design"
        android:drawableLeft="@drawable/ic_baseline_account_box_30"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:lines="1"
        android:maxLength="11"
        android:paddingLeft="14dp"
        android:text=""
        android:textColorHint="#7c8500"
        android:textSize="21dp" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/text_design"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textMultiLine"
        android:lines="4"
        android:maxLength="100"
        android:paddingLeft="14dp"
        android:gravity="start"
        android:text=""
        android:textColorHint="#7c8500"
        android:textSize="21dp" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/text_design"
        android:drawableLeft="@drawable/ic_baseline_account_box_30"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date"
        android:lines="1"
        android:maxLength="15"
        android:paddingLeft="14dp"
        android:text=""
        android:textColorHint="#7c8500"
        android:textSize="21dp" />

    <Button
        android:id="@+id/signupsavebtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/buttondesign"
        android:text="@string/signupsavebtn"
        android:textSize="18sp" />

    <Button
        android:id="@+id/signuploginbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/buttondesign"
        android:text="@string/signuploginbtn"
        android:textSize="18sp" />
</LinearLayout>